# megapixels

./: .gitlab-ci.yml  README.md  camera.c  camera.glade  camera.h  camera_config.c  camera_config.h  device.c  device.h  io_pipeline.c  io_pipeline.h  main.c  main.h  matrix.c  matrix.h  meson.build  pipeline.c  pipeline.h  postprocess.sh  process_pipeline.c  process_pipeline.h  quickpreview.c  wb.h  x230.ini
config/: purism,librem5r2.ini  purism,librem5r3.ini  purism,librem5r4.ini
data/: 10_millipixels  org.postmarketos.Megapixels.desktop  sm.puri.Millipixels.desktop  sm.puri.Millipixels.metainfo.xml
debian/: changelog  control  copyright  gbp.conf  megapixels.install  millipixels.install  rules  watch
debian/patches/: 0001-desktop-add-main-category-and-keywords.patch  0002-Fix-libtiff-4.2-incompatability.patch  series
debian/upstream/: metadata
src/: focus.h  focus.rs  libcam.cpp  libcam.h  postproc.h  postproc.rs
tests/: test_quickpreview.c
tools/: camera_test.c
